# Learn-to-Compress

./: .clang-format  .gitignore  CMakeLists.txt  README.md  best_compress.cpp  binary_search.cpp  bit_opt.h  classifier_CART.cpp  classifier_MLP.cpp  example.cpp  gen_norm.py  model_5dim.txt  piecewise.cpp  plot.py  predict_compress.cpp  predict_compress_regress.cpp  regressor_CART.cpp  search_hyper_regress.cpp  sortedness.cpp  test_bitmap.cpp
benchmark/: auto_int.sh  auto_int_benchmark.py  dictionary_benchmark.sh  fix_int.sh  fix_int_benchmark.py
data_preprocess/: data_generation.cpp  data_process.cpp  method_process.cpp
data_process/: data_generation.cpp  data_process.cpp
experiments/: Delta_int_fix_template.cpp  FOR_int_fix_template.cpp  RNS_int.cpp  auto_int.cpp  binary_search.cpp  classifier_CART.cpp  delta_int_template.cpp  example.cpp  example_auto.cpp  example_fix.cpp  example_fix_128.cpp  example_fix_mpz.cpp  example_fix_padding_template.cpp  example_fix_template.cpp  example_fsst.cpp  filter_test.cpp  fix_int.cpp  huffman_int.cpp  leco_double_int_template.cpp  leco_double_int_template_wo_round.cpp  leco_dp.cpp  leco_filter.cpp  leco_int_fix_template.cpp  leco_int_pol_fix_template.cpp  leco_int_simd_template.cpp  leco_int_template.cpp  leco_lp_cost.cpp  leco_string_subset.cpp  leco_string_subset_shift.cpp  pol_mix_metric_template.cpp  pol_mix_template.cpp  poly_int.cpp  poly_int_template.cpp  predict_compress_accuracy.cpp  predict_compress_regress_multi.cpp  raw_test_dictionary.cpp  regressor_CART.cpp  search_hyper_regress.cpp  snappy_int.cpp  test_bitmap.cpp  (+2 more)
headers/: FOR.h  FOR_integer_template.h  FOR_my.h  Layer.h  LinearRegression.h  MLP.h  MLPNode.h  MLPUtils.h  Node.h  Polynomial.hpp  Polynomial.tpp  RANSAC.h  auto_log  bignumber.h  bit_opt.h  bit_packing.h  bit_read.h  bit_write.h  bitvector.hpp  codecfactory.h  codecs.h  combinedcodec.h  common.h  create_feature.h  decision_tree.h  delta.h  delta_cost_integer_template.h  delta_cost_merge_integer_template.h  delta_cost_merge_integer_template_link.h  delta_integer_template.h  delta_my.h  elias-fano.h  entropy.h  file_manage.h  fls_headers.h  lr.h  maskvbyte.h  matrix_inverse.h  memutil.h  model_selection.h  (+64 more)
headers/ALEX/: alex.h  alex_fanout_tree.h  alex_map.h  alex_multimap.h  alex_nodes.h
headers/art/: art32.h  base.h  util.h
headers/headers/: bit_opt.h  caltime.h  codecs.h  lr.h  varintencode.h
headers/string/: bit_read_string.h  fsst_string.h  leco_string.h  leco_string_subset.h  leco_string_subset_shift.h  leco_uint256.h  lr_string.h  lr_string_mpz.h  piecewise_auto_string.h  piecewise_fix_string.h  piecewise_fix_string_mpz_t.h  piecewise_fix_string_outlier_detect.h  piecewise_fix_string_padding_template.h  piecewise_fix_string_template.h  string_utils.h
headers/stx-btree/: btree_map.h  btree_multimap.h
reg_model/: reg_model_FOR.txt  reg_model_nonlinear.txt  reg_model_piecewise.txt  reg_model_rle.txt
scripts/: Untitled.ipynb  benchmark_filter.py  classifier.ipynb  download.sh  download_dataset.sh  fb_fanout.out  gen_bitmap.py  gen_norm.py  gen_string.py  generate_stepwise.py  install_eigen_local.sh  leco_lp.py  newman_fanout.out  plot.ipynb  plot_cr_ra.ipynb  poisson_randomdie.py  render.html  setup.sh  setup_dependencies.sh  test_bitmap.py  wiki_fanout.out
scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  plot-checkpoint.ipynb
scripts/drafts/: dataset.h  poisson_sparse.py  process_books_normal.py
scripts/leco_lp/: benchmark_leco_lp.py  leco_lp.py
scripts/leco_lp_cost/: benchmark_leco_lp_cost.py  leco_lp_cost.py  leco_lp_cost.sh
scripts/leco_scripts/: leco_agg.py
scripts/paper_scripts/: arrow_bench.ipynb  i3g_new.csv  plot_cr_ra.ipynb  plot_parquet_new.ipynb  zstd_result_new.csv
scripts/paper_scripts/.ipynb_checkpoints/: plot_parquet_new-checkpoint.ipynb
src/: CMakeLists.txt  LayerTest.cpp  LinearRegression.cpp  MLP.cpp  MLPTest.cpp  Makefile  NodeTest.cpp  RANSAC.cpp  bignumber.cpp  bpacking.cpp  codecs.cpp  nohup.out  piecewise_bpacking.cpp  test  test.cpp  testfix  testour  testour.cpp  testpiecewise_fix.cpp  unit.cpp  varintdecode.cpp  varintencode.cpp
src/src/: LinearRegression.cpp  Utils.cpp  varintencode.cpp
test/test/: CMakeLists.txt
test/test/unitTest/: test_FOR.cpp  test_maskvbyte.cpp  test_piecewise_fix.cpp
test/unitTest/: predict_compress_MLP.cpp  test_FOR.cpp  test_combined.cpp  test_maskvbyte.cpp  test_multi_fanout.cpp  test_nonlinear_fix.cpp  test_piecewise_auto.cpp  test_piecewise_fanout.cpp  test_piecewise_fix.cpp  test_piecewise_fix_32.cpp  test_piecewise_fix_delta.cpp  test_piecewise_outlier_detect.cpp  test_piecewise_ransac.cpp  test_ransac_fix.cpp  test_ransac_outlier_detect.cpp  test_rle.cpp
